--- a/.github/workflows/weirdhost-AutoRenew.yml
+++ b/.github/workflows/weirdhost-AutoRenew.yml
@@ -65,9 +65,9 @@ jobs:
           fi
         working-directory: ${{ github.repository_owner }}-${{ github.event.repository.name }}-${{ env.PROJECT_DIR }}
 
-      # 步骤 5.5: 安装 SeleniumBase 驱动
-      - name: 🤖 安装 SeleniumBase 驱动
-        run: sbase install chromedriver
+      # 步骤 5.5: 安装 Playwright 浏览器
+      - name: 🎭 安装 Playwright 浏览器
+        run: playwright install chromium
         working-directory: ${{ github.repository_owner }}-${{ github.event.repository.name }}-${{ env.PROJECT_DIR }}
 
       # 步骤 6: 添加随机延迟
@@ -90,8 +90,6 @@ jobs:
 
           WEIRDHOST_TG_BOT_TOKEN: ${{ secrets.WEIRDHOST_TG_BOT_TOKEN }}
           WEIRDHOST_TG_CHAT_ID: ${{ secrets.WEIRDHOST_TG_CHAT_ID }}
-          # github 必须放true--->浏览器在后台无界面运行
-          HEADLESS: "true"
         run: xvfb-run -a python ${{ env.SCRIPT_NAME }}
         working-directory: ${{ github.repository_owner }}-${{ github.event.repository.name }}-${{ env.PROJECT_DIR }}
 
